--- a/flipbook-widget.html
+++ b/flipbook-widget.html
@@ -1,13 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Echoes Flipbook</title>
-  <link rel="stylesheet" href="assets/flipbook.css">
-  <script src="assets/jquery.min.js"></script>
-  <script src="assets/turn.min.js"></script>
+  <link rel="stylesheet" href="assets/flipbook.css" />
   <style>
     body {
       margin: 0;
@@ -21,22 +18,39 @@
     #flipbook {
       width: 90vw;
       height: 90vh;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+    #flipbook .page {
+      width: 100%;
+      height: 100%;
+    }
+    #flipbook img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
   </style>
 </head>
 <body>
-  <div id="flipbook">
-    <div><img src="assets/page1.jpg" style="width:100%; height:auto;"></div>
-    <div><img src="assets/page2.jpg" style="width:100%; height:auto;"></div>
-  </div>
 
-  <script>
-    $('#flipbook').turn({
-      width: '100%',
-      height: '100%',
-      autoCenter: true
+<div id="flipbook">
+  <div class="page"><img src="assets/page1.jpg" alt="Page 1" /></div>
+  <div class="page"><img src="assets/page2.jpg" alt="Page 2" /></div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="assets/turn.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $("#flipbook").turn({
+      width: $("#flipbook").width(),
+      height: $("#flipbook").height(),
+      autoCenter: true,
+      elevation: 50,
+      gradients: true
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
